// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copy-document should copy a document to root 1`] = `
{
  "content": [
    {
      "text": "{"id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`copy-document should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
